Update setup guide and README for clarity; streamline flag file instructions and enhance executable JAR build process